Change download URL in app-archive.json
Update the download URL for version 2.8.0+1.

--- a/app-archive.json
+++ b/app-archive.json
@@ -7,7 +7,7 @@
       "shortVersion": 280, 
       "date": "2026-02-10",
       "mandatory": false,
-      "url": "https://raw.githubusercontent.com/Pawan-bari/my-app-updates/main/2.8.0+1-windows/release.zip",
+      "url": "https://raw.githubusercontent.com/Pawan-bari/my-app-updates/main/2.8.0+1-windows/",
       "platform": "windows",
       "changes": [
         {
