--- a/app-archive.json
+++ b/app-archive.json
@@ -4,10 +4,10 @@
   "items": [
     {
       "version": "2.8.0+1",
-      "shortVersion": 280, 
+      "shortVersion": 280,
       "date": "2026-02-10",
       "mandatory": false,
-      "url": "https://raw.githubusercontent.com/Pawan-bari/my-app-updates/main/2.8.0+1-windows/",
+      "url": "https://raw.githubusercontent.com/Pawan-bari/my-app-updates/main/2.8.0+1-windows",
       "platform": "windows",
       "changes": [
         {
